tests/csmith/bad/smith000488.c
/*
 * This is a RANDOMLY GENERATED PROGRAM.
 *
 * Generator: csmith 2.0.0
 * svn version: exported
 * Options:   --check-global -s 488
 * Seed:      488
 */

#include "random_runtime.h"


long __undefined;

/* --- Struct/Union Declarations --- */
/* --- GLOBAL VARIABLES --- */
 volatile int64_t g_5 = 1L;/* VOLATILE GLOBAL g_5 */
uint8_t g_7 = 0x48L;
int32_t g_21 = -9L;
int32_t * volatile g_20 = &g_21;/* VOLATILE GLOBAL g_20 */


/* --- FORWARD DECLARATIONS --- */
int64_t  func_1(void);


/* --- FUNCTIONS --- */
/* ------------------------------------------ */
/* 
 * reads : g_5 g_7 g_20 g_21
 * writes: g_7 g_21
 */
int64_t  func_1(void)
{ /* block id: 0 */
    uint32_t l_4 = 0x4A8B108FL;
    int32_t l_6 = -1L;
    int32_t *l_18 = 0;
    int32_t *l_19 = 0;
    l_6 ^= (safe_div_func_uint16_t_u_u(l_4, g_5));
    g_7 = (l_6 != l_6);
    (*g_20) = ((((-1L != g_5) != g_7) ^ ((safe_lshift_func_uint16_t_u_u(l_6, g_7)) != (safe_mul_func_uint8_t_u_u((safe_lshift_func_uint16_t_u_u((safe_mul_func_uint8_t_u_u(g_7, g_7)), (safe_mul_func_uint8_t_u_u(g_7, l_6)))), g_7)))) ^ ((g_7 || -9L) > (g_7 < l_6)));
    return g_21;
}




/* ---------------------------------------- */
int main (int argc, char* argv[])
{
    func_1();
    printf("checksum g_5 = %d\n", g_5);
    printf("checksum g_7 = %d\n", g_7);
    printf("checksum g_21 = %d\n", g_21);
}

/************************ statistics *************************
XXX max struct depth: 0
breakdown:
   depth: 0, occurrence: 8

XXX max expression depth: 0
breakdown:
   depth: 0, occurrence: 4

XXX total number of pointers: 3

XXX times a variable address is taken: 1
XXX times a pointer is dereferenced on RHS: 0
breakdown:
XXX times a pointer is dereferenced on LHS: 1
breakdown:
   depth: 1, occurrence: 1
XXX times a pointer is compared with null: 0
XXX times a pointer is compared with address of another variable: 0
XXX times a pointer is compared with another pointer: 0
XXX times a pointer is qualified to be dereferenced: 0

XXX max dereference level: 1
breakdown:
   level: 0, occurrence: 0
   level: 1, occurrence: 2
XXX number of pointers point to pointers: 0
XXX number of pointers point to scalars: 3
XXX number of pointers point to structs: 0
XXX percent of pointers has null in alias set: 66.7
XXX average alias set size: 1

XXX times a non-volatile is read: 15
XXX times a non-volatile is write: 3
XXX times a volatile is read: 2
XXX    times read thru a pointer: 0
XXX times a volatile is write: 1
XXX    times written thru a pointer: 0
XXX times a volatile is available for access: 3
XXX percentage of non-volatile access: 85.7

XXX forward jumps: 0
XXX backward jumps: 0

XXX stmts: 5

XXX percentage a fresh-made variable is used: 21.1
XXX percentage an existing variable is used: 78.9
********************* end of statistics **********************/

